Theme: Nigerian dishes + dark gold palette, updated address/hours

--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,7 @@
 <h1 class="section-title">Find Us</h1>
 <!-- Easiest map: use standard Google Maps embed (no API key needed) -->
 <div class="map-wrap">
-<iframe title="Map" width="100%" height="320" style="border:0" loading="lazy" allowfullscreen
-src="https://www.google.com/maps?q=Hunter+College+NYC&output=embed"></iframe>
+<iframe title="Map" width="100%" height="320" style="border:0" loading="lazy" allowfullscreensrc="https://www.google.com/maps?q=695+Park+Ave,+New+York,+NY+10065&output=embed"></iframe>
 </div>
 <p class="muted">123 Park Ave, New York, NY 10065 · (212) 555‑0101 · Open Daily 11:00–22:00</p>
 </div>
