--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="style.css" />
 <!DOCTYPE html>
 <p>From smoky Jollof rice and spicy Suya to fluffy Puff‑Puff — home‑style flavors made fresh daily in NYC.</p>
 <a href="menu.html" class="btn primary">View Menu</a>
@@ -45,9 +46,9 @@
 <footer class="site-footer">
 <div class="container footer-grid">
 <div>
-<h4>Naija Bites</h4>
-<p>123 Park Ave, New York, NY</p>
-<p>Open Daily: 11:00–22:00</p>
+  <h4>Naija Bites</h4>
+  <p>695 Park Ave, New York, NY 10065</p>
+  <p>Mon–Sun: 11:00 – 22:00</p>
 </div>
 <div>
 <h4>Follow</h4>
