--- a/gallery.html
+++ b/gallery.html
@@ -33,12 +33,23 @@
 <div class="snap-slider">
 <a class="snap-btn left" href="#slide-1">‹</a>
 <div class="snap-track">
-<img id="slide-1" src="https://images.unsplash.com/photo-1526318472351-c75fcf070305?w=1600&auto=format&fit=crop" alt="Jollof Rice with chicken">
-<img id="slide-2" src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe?w=1600&auto=format&fit=crop" alt="Fried plantain (dodo)">
-<img id="slide-3" src="https://images.unsplash.com/photo-1550317138-10000687a72b?w=1600&auto=format&fit=crop" alt="Puff-Puff">
-<img id="slide-4" src="https://images.unsplash.com/photo-1544025162-d76694265947?w=1600&auto=format&fit=crop" alt="Beef Suya">
-<img id="slide-5" src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?w=1600&auto=format&fit=crop" alt="Egusi soup and pounded yam">
-<img id="slide-6" src="https://images.unsplash.com/photo-1564758567024-5c4f6ab5b36b?w=1600&auto=format&fit=crop" alt="Nigerian table spread">
+  <!-- Jollof -->
+  <img id="slide-1" src="https://images.unsplash.com/photo-1601050690597-9d37f3df1f86?w=1600&auto=format&fit=crop" alt="Jollof Rice">
+
+  <!-- Fried plantain (dodo) -->
+  <img id="slide-2" src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe?w=1600&auto=format&fit=crop" alt="Fried plantain (dodo)">
+
+  <!-- Puff-Puff -->
+  <img id="slide-3" src="https://images.unsplash.com/photo-1523986371872-9d3ba2e2f642?w=1600&auto=format&fit=crop" alt="Puff-Puff">
+
+  <!-- Suya (grilled skewers vibe) -->
+  <img id="slide-4" src="https://images.unsplash.com/photo-1550547660-d9450f859349?w=1600&auto=format&fit=crop" alt="Beef Suya">
+
+  <!-- Egusi soup / hearty stew vibe -->
+  <img id="slide-5" src="https://images.unsplash.com/photo-1519708227418-c8fd9a32b7a2?w=1600&auto=format&fit=crop" alt="Egusi-style soup">
+
+  <!-- Interior / dining table -->
+  <img id="slide-6" src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?w=1600&auto=format&fit=crop" alt="Restaurant interior">
 </div>
 <a class="snap-btn right" href="#slide-6">›</a>
 </div>
