--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <h2 class="section-title">Chef's Picks</h2>
       <div class="cards">
         <article class="card">
-          <img src="https://images.unsplash.com/photo-1604908176997-4314a1b2b8e2?w=800&auto=format&fit=crop" alt="Jollof Rice"/>
+          <img src="https://images.unsplash.com/photo-1601050690597-9d37f3df1f86?w=800&auto=format&fit=crop" alt="Jollof Rice" />
           <div class="card-body">
             <h3>Party Jollof</h3>
             <p>Smoky, tomato-rich rice with fried plantain.</p>
@@ -54,7 +54,7 @@
           </div>
         </article>
         <article class="card">
-          <img src="https://images.unsplash.com/photo-1544025162-d76694265947?w=800&auto=format&fit=crop" alt="Suya"/>
+          <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?w=800&auto=format&fit=crop" alt="Beef Suya" />
           <div class="card-body">
             <h3>Beef Suya</h3>
             <p>Grilled skewers tossed in peanut-spice rub.</p>
@@ -62,7 +62,7 @@
           </div>
         </article>
         <article class="card">
-          <img src="https://images.unsplash.com/photo-1550317138-10000687a72b?w=800&auto=format&fit=crop" alt="Puff-Puff"/>
+          <img src="https://images.unsplash.com/photo-1523986371872-9d3ba2e2f642?w=800&auto=format&fit=crop" alt="Puff-Puff" />
           <div class="card-body">
             <h3>Puff-Puff</h3>
             <p>Golden, airy fried dough balls with sugar dust.</p>
