Updated hero, Chef's Picks, and Gallery images with Nigerian dishes

--- a/about.html
+++ b/about.html
@@ -9,36 +9,39 @@
 </head>
 <body>
 <header class="site-header">
-<div class="container header-inner">
-<a class="logo" href="index.html">Naija Bites<span>.</span></a>
-<input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation">
-<label for="nav-toggle" class="hamburger" aria-hidden="true">☰</label>
-<nav class="nav">
-<a href="index.html">Home</a>
-<a href="menu.html">Menu</a>
-<a href="gallery.html">Gallery</a>
-<a href="about.html" class="active">About</a>
-<a href="contact.html">Contact</a>
-</nav>
-</div>
+  <div class="container header-inner">
+    <a class="logo" href="index.html">Naija Bites<span>.</span></a>
+    <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation">
+    <label for="nav-toggle" class="hamburger" aria-hidden="true">☰</label>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="menu.html">Menu</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="about.html" class="active">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
 </header>
 
-
 <main class="section">
-<div class="container about-grid">
-<div>
-<h1 class="section-title">Our Story</h1>
-<p>Naija Bites began as a family pop‑up sharing meals from Lagos. We cook with
-smoky peppers, fragrant spices, and fresh greens — honoring tradition while
-welcoming everyone to the table.</p>
-<p>Favorites include party Jollof, rich Egusi soup with pounded yam, and street‑style
-Suya straight off the grill. Come hungry, leave happy.</p>
-</div>
-<img class="about-img" src="https://images.unsplash.com/photo-1526318472351-c75fcf070305?w=1200" alt="Restaurant interior">
-</div>
+  <div class="container about-grid">
+    <div>
+      <h1 class="section-title">Our Story</h1>
+      <p>Naija Bites began as a family pop-up sharing meals from Lagos. We cook with
+      smoky peppers, fragrant spices, and fresh greens — honoring tradition while
+      welcoming everyone to the table.</p>
+      <p>Favorites include party Jollof, rich Egusi soup with pounded yam, and street-style
+      Suya straight off the grill. Come hungry, leave happy.</p>
+    </div>
+    <!-- Replaced papaya/restaurant interior with Egusi Soup -->
+    <img class="about-img" src="https://images.squarespace-cdn.com/content/v1/614f831e90f08045038b4dae/9a18e8d0-efc6-4ca6-aa4c-656f7d53cd4e/Recipe-for-Egusi-Soup.png" alt="Egusi Soup with pounded yam">
+  </div>
 </main>
 
-
-<footer class="site-footer"><div class="container footer-grid"><p>© 2025 Naija Bites</p></div></footer>
+<footer class="site-footer">
+  <div class="container footer-grid">
+    <p>© 2025 Naija Bites</p>
+  </div>
+</footer>
 </body>
 </html>
