Added shopping cart feature to menu page

--- a/gallery.html
+++ b/gallery.html
@@ -57,7 +57,7 @@
 </div>
 
 
-<p class="muted">Tip: You can swipe horizontally on mobile. This is a slider without JavaScript using CSS <em>scroll‑snap</em>.</p>
+<p class="muted">This is a slider <em>scroll‑snap</em>.</p>
 </div>
 </main>
 
