Added cart icon and live item count in header

--- a/menu.html
+++ b/menu.html
@@ -20,6 +20,10 @@
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
+    <!-- Cart icon -->
+    <div id="cart-icon" class="cart-icon" aria-label="Shopping cart">
+        <span id="cart-count">0</span>
+    </div>
   </div>
 </header>
 
